--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,9 @@ framework = arduino
 lib_deps = 
 	mobizt/Firebase Arduino Client Library for ESP8266 and ESP32@^4.3.10
 	arduino-libraries/NTPClient@^3.2.1
+	adafruit/Adafruit Unified Sensor@^1.1.9
+	adafruit/DHT sensor library@^1.4.4
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	paulstoffregen/OneWire@^2.3.7
+	milesburton/DallasTemperature@^3.11.0
 monitor_speed = 115200
