--- a/platformio.ini
+++ b/platformio.ini
@@ -20,4 +20,5 @@ lib_deps =
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
 	paulstoffregen/OneWire@^2.3.7
 	milesburton/DallasTemperature@^3.11.0
+	worldfamouselectronics/PulseSensor Playground@^1.8.0
 monitor_speed = 115200
