--- a/platformio.ini
+++ b/platformio.ini
@@ -21,4 +21,5 @@ lib_deps =
 	paulstoffregen/OneWire@^2.3.7
 	milesburton/DallasTemperature@^3.11.0
 	worldfamouselectronics/PulseSensor Playground@^1.8.0
+	adafruit/RTClib@^2.1.1
 monitor_speed = 115200
