--- a/platformio.ini
+++ b/platformio.ini
@@ -22,4 +22,5 @@ lib_deps =
 	milesburton/DallasTemperature@^3.11.0
 	worldfamouselectronics/PulseSensor Playground@^1.8.0
 	adafruit/RTClib@^2.1.1
+	sinricpro/SinricPro@^2.11.1
 monitor_speed = 115200
