--- a/platformio.ini
+++ b/platformio.ini
@@ -23,4 +23,6 @@ lib_deps =
 	worldfamouselectronics/PulseSensor Playground@^1.8.0
 	adafruit/RTClib@^2.1.1
 	sinricpro/SinricPro@^2.11.1
+	olkal/HX711_ADC@^1.2.12
+	adafruit/Adafruit BusIO@^1.14.1
 monitor_speed = 115200
